--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 					<span id="bb-nav-next">&rarr;</span>
 				</nav>
 
-				<span id="tblcontents" class="menu-button">Table of Contents</span>
+				<span id="tblcontents" class="menu-button">目录</span>
 
 			</div>
 				
 		</div><!-- /container -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="https://cdn.staticfile.org/jquery/1.8.3/jquery.min.js"></script>
 		<script src="js/jquery.mousewheel.js"></script>
 		<script src="js/jquery.jscrollpane.min.js"></script>
 		<script src="js/jquerypp.custom.js"></script>
