--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 				<div id="bb-bookblock" class="bb-bookblock">
 					<div class="bb-item" id="item1">
 						<div class="content">
-							<h1>主页</h1>
+							<div class="partialContent">
+								<h1>Ahri Gallery</h1>
+							</div>
+							<div class="partialContent">
+								<img src="./image/AhriGallery01.jpg">
+							</div>
 						</div>
 					</div>
 					<div class="bb-item" id="item2">
